# ImageMagickBasic

./: README.md
RulerProject/: CMakeLists.txt  install_imagemagick.sh
RulerProject/include/: ruler.hpp
RulerProject/src/: main.cpp  ruler.cpp
RulerProject_0.1/src/: ruler.cpp
examples/c/: Makefile  image.c
examples/cpp/: Makefile  image.c  image.h  main.cpp
